--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Hello World!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, vel. Veritatis nobis, nemo consequatur, exercitationem reprehenderit unde deserunt corrupti ut quod eveniet nihil placeat eligendi praesentium officia sit vero minima?</p>
+    <ul>
+        <li>satu</li>
+        <li>dua</li>
+    </ul>
 </body>
 </html>
